--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ android {
         androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
         implementation 'com.jakewharton:butterknife:10.1.0'
         annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+        implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     }
 }
