--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
-Goodreads_Token= "FwwsTi0yZrFdE0LzRAzKgQ"
+GoodReads_Token= "LkdxxzRiALyfAhh2nurYfQ"
 
 
