--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".IntrosActivity"
+        <activity android:name=".ui.IntrosActivity"
 
             android:theme="@style/NoActionBarTheme">
             <intent-filter>
@@ -19,23 +19,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LibraryActivity">
+        <activity android:name=".ui.LibraryActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.readmore.IntrosActivity"></meta-data>
+                android:value="com.example.readmore.ui.IntrosActivity"></meta-data>
 
         </activity>
-        <activity android:name=".BooksActivity" />
+        <activity android:name=".ui.BooksActivity" />
 
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.example.readmore.IntrosActivity"></meta-data>
+            android:value="com.example.readmore.ui.IntrosActivity"></meta-data>
 
 
-            <activity android:name=".MainActivity" />
+            <activity android:name=".ui.MainActivity" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.example.readmore.IntrosActivity"></meta-data>
+            android:value="com.example.readmore.ui.IntrosActivity"></meta-data>
 
         </application>
 
