--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
         implementation 'com.squareup.okhttp3:okhttp:4.0.1'
         implementation 'com.squareup.picasso:picasso:2.71828'
         implementation 'com.jakewharton:butterknife:10.0.0'
-        implementation 'com.android.support:recyclerview-v7:+'
+        implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
         implementation 'androidx.legacy:legacy-support-v4:1.0.0'
         implementation 'com.github.smart-fun:XmlToJson:1.4.5'
         implementation 'org.parceler:parceler-api:1.1.12'
