--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,33 +31,34 @@ android {
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/notice.txt'
     }
-        compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_8
-            targetCompatibility JavaVersion.VERSION_1_8
-        }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
+}
 
-    dependencies {
-        implementation fileTree(dir: 'libs', include: ['*.jar'])
-        implementation 'androidx.appcompat:appcompat:1.0.2'
-        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-        implementation 'com.google.android.material:material:1.0.0'
-        implementation 'com.squareup.okhttp3:okhttp:4.0.1'
-        implementation 'com.squareup.picasso:picasso:2.71828'
-        implementation 'com.jakewharton:butterknife:10.0.0'
-        implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
-        implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-        implementation 'com.github.smart-fun:XmlToJson:1.4.5'
-        implementation 'org.parceler:parceler-api:1.1.12'
-        implementation 'com.google.firebase:firebase-core:17.0.0'
-        annotationProcessor 'org.parceler:parceler:1.1.12'
-        annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
-        implementation 'com.google.code.gson:gson:2.8.5'
-        testImplementation 'junit:junit:4.12'
-        androidTestImplementation 'androidx.test:runner:1.2.0'
-        androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-        testImplementation "org.robolectric:robolectric:4.2"
-        apply plugin: 'com.google.gms.google-services'
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.github.smart-fun:XmlToJson:1.4.5'
+    implementation 'org.parceler:parceler-api:1.1.12'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "org.robolectric:robolectric:4.2"
+    apply plugin: 'com.google.gms.google-services'
 
 
-    }
+}
