--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.readmore">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,8 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.IntrosActivity"
-
+        <activity android:name=".ui.CreateAccountActivity"></activity>
+        <activity
+            android:name=".ui.IntrosActivity"
             android:theme="@style/NoActionBarTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,21 +24,19 @@
         <activity android:name=".ui.LibraryActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.readmore.ui.MainActivity"></meta-data>
-
+                android:value="com.example.readmore.ui.MainActivity" />
         </activity>
         <activity android:name=".ui.BooksActivity" />
 
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.example.readmore.ui.IntrosActivity"></meta-data>
+            android:value="com.example.readmore.ui.IntrosActivity" />
 
+        <activity android:name=".ui.MainActivity" />
 
-            <activity android:name=".ui.MainActivity" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.example.readmore.ui.IntrosActivity"></meta-data>
+            android:value="com.example.readmore.ui.IntrosActivity" />
+    </application>
 
-        </application>
-
-    </manifest>
+</manifest>
