--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,6 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.github.smart-fun:XmlToJson:1.4.5'
     implementation 'org.parceler:parceler-api:1.1.12'
-    implementation 'com.google.firebase:firebase-core:17.0.0'
-    implementation 'com.google.firebase:firebase-auth:18.1.0'
     annotationProcessor 'org.parceler:parceler:1.1.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -58,6 +56,11 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     testImplementation "org.robolectric:robolectric:4.2"
+    implementation 'com.google.firebase:firebase-core:17.0.1'
+    implementation 'com.google.firebase:firebase-database:18.0.1'
+    implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    implementation 'com.google.firebase:firebase-auth:18.1.0'
+
     apply plugin: 'com.google.gms.google-services'
 
 
