--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.CreateAccountActivity"></activity>
+        <activity android:name=".ui.AllBooksActivity"></activity>
+        <activity android:name=".ui.CreateAccountActivity" />
         <activity
             android:name=".ui.LoginActivity"
             android:theme="@style/NoActionBarTheme">
